# genokit

./: .gitignore  Phase1Plan  README.md  pyproject.toml
Plans/: Phase1Plan
plans/: parse_fasta.docx  parse_fasta_test_cases.md  ~$rse_fasta.docx
src/genokit/: cli.py  fasta.py  fasta_parser.py
tests/: test_cli_help.py  test_fasta_record.py  test_smoke.py
